# klong

./: CMakeLists.txt
bloom_filter/: main_prefix_bloom.cpp
cmake/: embed_megahit.py
src/: main.cpp  megahit
src/sequence/io/edge/: edge_reader.h  edge_writer.h
